Fixed bug with overflow content

--- a/app/sass/blocks/program.scss
+++ b/app/sass/blocks/program.scss
@@ -22,7 +22,6 @@
 
     display: grid;
     grid-gap: 14px;
-    width: 100%;
 
     border: none;
     box-sizing: border-box;
@@ -308,6 +307,10 @@
     &__label {
       width: 630px;
       margin: 0 auto;
+
+      &--checkbox {
+        width: 315px;
+      }
     }
 
 
@@ -351,6 +354,7 @@
       margin-left: 30px;
       margin-top: 65px;
 
+      width: auto;
       font-size: 16px;
       grid-column: auto;
     }
